--- a/src/prototipogym/view/ManReserva.form
+++ b/src/prototipogym/view/ManReserva.form
@@ -317,6 +317,9 @@
             <Property name="text" type="java.lang.String" value="Guarda"/>
             <Property name="borderPainted" type="boolean" value="false"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ButtonGuardarActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="ButtonLimpiar">
           <Properties>
