--- a/src/prototipogym/view/consultas/ConEntrenador.form
+++ b/src/prototipogym/view/consultas/ConEntrenador.form
@@ -148,6 +148,9 @@
             <Property name="text" type="java.lang.String" value="Consultar"/>
             <Property name="borderPainted" type="boolean" value="false"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+          </Events>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane1">
           <AuxValues>
