--- a/src/prototipogym/view/mantenimientos/ManReservaActividades.form
+++ b/src/prototipogym/view/mantenimientos/ManReservaActividades.form
@@ -133,9 +133,9 @@
                   </Group>
                   <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="TextFechaReserva" alignment="1" min="-2" pref="32" max="-2" attributes="0"/>
+                          <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Component id="Chooser" min="-2" max="-2" attributes="0"/>
                   </Group>
